--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,61 @@
 
 *{
     font-family: 'Mulish', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.primary-text-color{
+    color: #FF5400;
+}
+
+/* header styles - start */
+header{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 20px;
+    /* border: 2px solid rebeccapurple; */
+    position: relative;
+}
+/* nav style - start */
+nav{
+    margin: 40px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid rebeccapurple; */
+
+}
+.nav-title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 2.2rem;
+    font-weight: 700;
+    /* border: 2px solid rebeccapurple; */
+
+}
+
+.navbar > ul{
+    display: flex;
+    gap: 15px;
+    /* border: 2px solid rebeccapurple; */
+
+}
+
+.navbar > ul > li{
+    list-style: none;
+}
+
+.navbar > ul > li > a{
+    text-decoration: none;
+    color: #424247;
+    font-size: 1.2rem;
+}
+
+.navbar ul li a:hover{
+    color: #FF5400;
 }
 
 
+/* nav style - end */
+/* header styles - end */
