--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,80 @@ nav{
     color: #FF5400;
 }
 
+.navbar ul li a.active{
+    color: #FF5400;
+}
 
 /* nav style - end */
+
+/* banner section - start */
+#banner{
+    height: 500px;
+    width: 100%;
+    background: url("../Images/Group 13 (1) (1).png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+.banner-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, .30);
+    padding: 1rem;
+    /* overflow: hidden; */
+}
+.banner-texts{
+    color: white;
+    text-align: center;
+}
+
+.banner-texts h1{
+    font-size: 3.8rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.banner-texts p{
+    font-size: 1rem;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.banner-box{
+    width: 70%;
+    border: 2px solid white;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    border-radius: 8px;
+    border: 0;
+    background-color: rgba(255, 255, 255, .3);
+    margin-top: 2rem;
+}
+
+.banner-input{
+    border-radius: 8px;
+    border: 0;
+    font-size: 1rem;
+    padding: 1rem;
+    color: rgba(19, 19, 24, 0.70);
+    width: auto;
+}
+
+.banner-btn{
+    padding: 1rem 2rem ;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: 0;
+    background: #FF5400;
+    color: white;
+}
+/* banner section - end */
+
 /* header styles - end */
