--- a/style/style.css
+++ b/style/style.css
@@ -386,3 +386,47 @@ main {
 }
 /* newsletter - end */
 /* main section - end */
+/* footer - start */
+footer{
+  background: rgba(19, 19, 24, 0.05);
+  min-height: 400px;
+  width: 100%;
+  
+}
+.footer-content{
+  padding: 80px 0;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-text{
+  /* margin-top: 50px; */
+  width: 60%;
+  margin: 20px auto;
+  color: #5A5A5D;
+  line-height: 26px;
+}
+
+.brands{
+  margin-top: 20px;
+  display: flex;
+  gap: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.footer-hr{
+  border: none;
+  height: 1px;
+  background: rgba(19, 19, 24, 0.10);
+  width: 60%;
+}
+
+.footer-copyright{
+  color: #131318;
+}
+/* footer - end */
