--- a/style/style.css
+++ b/style/style.css
@@ -171,6 +171,7 @@ nav {
   border: 0;
   background: #ff5400;
   color: white;
+  cursor: pointer;
 }
 /* banner section - end */
 
@@ -264,6 +265,9 @@ main {
   color: white;
   font-size: 1.5rem;
   font-weight: 800;
+}
+.row-text:hover{
+  cursor: pointer;
 }
 /* choose your destination - end */
 
@@ -383,6 +387,9 @@ main {
   font-weight: 800;
   background: #ff5400;
   color: white;
+}
+.form-btn:hover{
+  cursor: pointer;
 }
 /* newsletter - end */
 /* trending - start */
